# minimind-v0.0.1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.py  test.py
configs/: clip.yaml  debug.yaml  default.yaml  mamba.yaml  vit.yaml  whisper.yaml
docker/: Dockerfile
infra/: tpus.sh
minimind/: cortex.py  minimind.py
minimind/config/: __init__.py
minimind/configs/: __init__.py
minimind/core/: __init__.py  cortex.py
minimind/cortex/: __init__.py  cortex.py
minimind/data/: __init__.py  dataset.py  hf.py  mixture.py  processors.py  tokenizers.py  utils.py
minimind/metrics/: __init__.py  cross_entropy.py
minimind/modeling/: __init__.py
minimind/modeling/architectures/: __init__.py  baymax_transformer.py  clip.py  mamba.py  state.py  transformer.py  vit.py  whisper.py
minimind/modeling/modules/: attention.py  clib_blocks.py  emb.py  mamba_block.py  mlp.py  simple.py  transformer_block.py  vit_block.py  whisper_blocks.py
minimind/modeling/modules/attentions/: __init__.py  attention.py  flash_attention.py  ring_attention.py  ring_attention_kernel.py
minimind/modeling/optimizers/: __init__.py
minimind/models/: __init__.py  mlp.py
minimind/utils/: __init__.py  constants.py  logger.py  parser.py
